--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,19 @@ h1 {
 .command:hover {
     color: red;
 }
+
+.button{
+    background-color: rgb(22, 100, 22);
+    color: white;
+    border: none;
+    padding: 15px 32px;
+    text-align: 14px;
+    font-weight: bold;
+    display: inline;
+    float: right;
+}
+
+.button:hover{
+    background-color: rgb(21, 128, 0);
+    box-shadow: 0px 0px 3px 0px rgb(0, 0, 0);
+}
